--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -8,3 +8,14 @@
 .cart p{
     font-size: 17px;
 }
+.btn-clear-cart{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 95%;
+    border-radius: 4px;
+    font-size: 21px;
+    color: white;
+    margin: 10px auto;
+    background: #FF3030;
+}
