--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -1,3 +1,20 @@
 .review-container{
     margin: 50px auto;
 }
+
+.proceed_link{
+    text-decoration: none;
+}
+
+.btn-proceed{
+    background: #FF9900;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 95%;
+    border-radius: 4px;
+    font-size: 21px;
+    color: white;
+    margin: 10px auto;
+}
